force-app/main/default/objects/Scheduled_Course__c/Scheduled_Course__c.object-meta.xml
<CustomObject>
    <label>Scheduled Course</label>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>