force-app/main/default/objects/Scheduled_Course__c/fields/Pending_Review__c.field-meta.xml
<CustomField>
    <fullName>Pending_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Review</label>
    <type>Checkbox</type>
</CustomField>