force-app/main/default/objects/Scheduled_Course__c/fields/Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Sent</label>
    <type>Checkbox</type>
</CustomField>